--- a/index.html
+++ b/index.html
@@ -4,16 +4,11 @@
   <meta charset="UTF-8" />
   <title>MinPris – tilbudskalkulator</title>
   <style>
-    body { font-family: Arial; background:#f2f2f2; padding:20px; }
-    .box { max-width:600px; margin:auto; background:#fff; padding:20px; border-radius:10px; }
-    input, textarea, button {
-      width:100%;
-      padding:10px;
-      margin-top:10px;
-      font-size:16px;
-    }
-    button { background:#111; color:white; cursor:pointer; }
-    .result { margin-top:20px; background:#eee; padding:10px; }
+    body { font-family: Arial; background:#f5f5f5; padding:30px }
+    .box { max-width:600px; margin:auto; background:white; padding:20px; border-radius:8px }
+    input, textarea, button { width:100%; padding:10px; margin-top:10px }
+    button { background:black; color:white; border:none; cursor:pointer }
+    pre { background:#eee; padding:10px; white-space:pre-wrap }
   </style>
 </head>
 <body>
@@ -30,58 +25,63 @@
   <button onclick="beregn()">Beregn</button>
   <button onclick="generer()">Generer tilbudstekst</button>
 
-  <div class="result" id="resultat"></div>
-  <div class="result" id="ai"></div>
+  <h3>Resultat</h3>
+  <pre id="resultat"></pre>
+
+  <h3>Tilbudstekst</h3>
+  <pre id="tekst"></pre>
+  <button onclick="kopier()">Kopier tekst</button>
 </div>
 
 <script>
-let total = 0;
+let kalkyle = {};
 
 function beregn() {
-  const timepris = Number(document.getElementById("timepris").value || 0);
-  const km = Number(document.getElementById("km").value || 0);
-  const avfall = Number(document.getElementById("avfall").value || 0);
-  const forbruk = Number(document.getElementById("forbruk").value || 0);
-
   const timer = 15;
   const dager = 2;
 
+  const timepris = Number(document.getElementById("timepris").value);
+  const km = Number(document.getElementById("km").value);
+  const avfall = Number(document.getElementById("avfall").value);
+  const forbruk = Number(document.getElementById("forbruk").value);
+
   const arbeid = timer * timepris;
   const kjøring = km * 5;
-  total = arbeid + kjøring + avfall + forbruk;
 
-  document.getElementById("resultat").innerHTML = `
-    Dager: ${dager}<br>
-    Timer: ${timer}<br>
-    Arbeid: ${arbeid} kr<br>
-    Kjøring: ${kjøring} kr<br>
-    Avfall: ${avfall} kr<br>
-    Forbruk: ${forbruk} kr<br><br>
-    <b>Total: ${total} kr</b>
-  `;
+  const total = arbeid + kjøring + avfall + forbruk;
+
+  kalkyle = { timer, dager, arbeid, kjøring, avfall, forbruk, total };
+
+  document.getElementById("resultat").textContent =
+`Dager: ${dager}
+Timer: ${timer}
+Arbeid: ${arbeid} kr
+Kjøring: ${kjøring} kr
+Avfall: ${avfall} kr
+Forbruk: ${forbruk} kr
+
+TOTAL: ${total} kr`;
 }
 
 async function generer() {
-  const desc = document.getElementById("desc").value;
-
   const res = await fetch("/api/ai", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({
-      description: desc,
-      price: total
+      beskrivelse: document.getElementById("desc").value,
+      ...kalkyle
     })
   });
 
   const data = await res.json();
+  document.getElementById("tekst").textContent = data.text;
+}
 
-  document.getElementById("ai").innerHTML = `
-    <b>Tilbudstekst:</b><br><br>
-    <pre>${data.text}</pre>
-    <button onclick="navigator.clipboard.writeText(\`${data.text}\`)">
-      Kopier tekst
-    </button>
-  `;
+function kopier() {
+  navigator.clipboard.writeText(
+    document.getElementById("tekst").textContent
+  );
+  alert("Tekst kopiert!");
 }
 </script>
 
