--- a/index.html
+++ b/index.html
@@ -4,84 +4,168 @@
   <meta charset="UTF-8" />
   <title>MinPris – tilbudskalkulator</title>
   <style>
-    body { font-family: Arial; background:#f5f5f5; padding:30px }
-    .box { max-width:600px; margin:auto; background:white; padding:20px; border-radius:8px }
-    input, textarea, button { width:100%; padding:10px; margin-top:10px }
-    button { background:black; color:white; border:none; cursor:pointer }
-    pre { background:#eee; padding:10px; white-space:pre-wrap }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f3f3f3;
+      padding: 20px;
+    }
+    .container {
+      max-width: 700px;
+      background: #fff;
+      padding: 20px;
+      border-radius: 6px;
+    }
+    h1 {
+      margin-top: 0;
+    }
+    textarea, input {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 10px;
+      font-size: 16px;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      font-size: 16px;
+      background: #111;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      margin-bottom: 10px;
+    }
+    button.secondary {
+      background: #333;
+    }
+    .result {
+      background: #eee;
+      padding: 15px;
+      margin-top: 10px;
+      white-space: pre-line;
+    }
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 <body>
 
-<div class="box">
-  <h2>MinPris – tilbudskalkulator</h2>
+<div class="container">
+  <h1>MinPris – tilbudskalkulator</h1>
 
-  <textarea id="desc" placeholder="Beskriv jobben..."></textarea>
-  <input id="timepris" placeholder="Timepris (kr)">
-  <input id="km" placeholder="Km per dag">
-  <input id="avfall" placeholder="Avfall (kr)">
-  <input id="forbruk" placeholder="Forbruk per dag (kr)">
+  <textarea id="description" rows="4" placeholder="Beskriv jobben (f.eks: Bad: 40t riving, 40t rengjøring)"></textarea>
 
-  <button onclick="beregn()">Beregn</button>
-  <button onclick="generer()">Generer tilbudstekst</button>
+  <input id="hourRate" type="number" placeholder="Timepris (kr)" />
+  <input id="kmPerDay" type="number" placeholder="Km per dag" />
+  <input id="waste" type="number" placeholder="Avfall (kr)" />
+  <input id="material" type="number" placeholder="Materiell / forbruk totalt (kr)" />
+  <input id="hmsPerDay" type="number" placeholder="HMS-forbruk per dag (kr)" />
 
-  <h3>Resultat</h3>
-  <pre id="resultat"></pre>
+  <button onclick="calculate()">Beregn</button>
+  <button class="secondary" onclick="generateText()">Generer tilbudstekst</button>
 
-  <h3>Tilbudstekst</h3>
-  <pre id="tekst"></pre>
-  <button onclick="kopier()">Kopier tekst</button>
+  <div id="calcResult" class="result hidden"></div>
+
+  <div id="aiSection" class="hidden">
+    <h3>Tilbudstekst</h3>
+    <div id="aiText" class="result"></div>
+    <button onclick="copyText()">Kopier tekst</button>
+  </div>
 </div>
 
 <script>
-let kalkyle = {};
+let calculationData = null;
 
-function beregn() {
-  const timer = 15;
-  const dager = 2;
+function calculate() {
+  const description = document.getElementById("description").value;
+  const hourRate = Number(document.getElementById("hourRate").value);
+  const kmPerDay = Number(document.getElementById("kmPerDay").value);
+  const waste = Number(document.getElementById("waste").value);
+  const material = Number(document.getElementById("material").value);
+  const hmsPerDay = Number(document.getElementById("hmsPerDay").value);
 
-  const timepris = Number(document.getElementById("timepris").value);
-  const km = Number(document.getElementById("km").value);
-  const avfall = Number(document.getElementById("avfall").value);
-  const forbruk = Number(document.getElementById("forbruk").value);
-
-  const arbeid = timer * timepris;
-  const kjøring = km * 5;
-
-  const total = arbeid + kjøring + avfall + forbruk;
-
-  kalkyle = { timer, dager, arbeid, kjøring, avfall, forbruk, total };
-
-  document.getElementById("resultat").textContent =
-`Dager: ${dager}
-Timer: ${timer}
-Arbeid: ${arbeid} kr
-Kjøring: ${kjøring} kr
-Avfall: ${avfall} kr
-Forbruk: ${forbruk} kr
-
-TOTAL: ${total} kr`;
-}
-
-async function generer() {
-  const res = await fetch("/api/ai", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      beskrivelse: document.getElementById("desc").value,
-      ...kalkyle
-    })
+  // Finn alle "XXt" i teksten
+  const hourMatches = description.match(/(\d+)\s*t/gi) || [];
+  let totalHours = 0;
+  hourMatches.forEach(m => {
+    totalHours += Number(m.replace(/[^0-9]/g, ""));
   });
 
-  const data = await res.json();
-  document.getElementById("tekst").textContent = data.text;
+  const days = Math.ceil(totalHours / 7.5);
+  const laborCost = totalHours * hourRate;
+  const drivingCost = kmPerDay * days * 15;
+  const hmsCost = hmsPerDay * days;
+
+  const total =
+    laborCost +
+    drivingCost +
+    waste +
+    material +
+    hmsCost;
+
+  calculationData = {
+    description,
+    totalHours,
+    days,
+    hourRate,
+    laborCost,
+    kmPerDay,
+    drivingCost,
+    waste,
+    material,
+    hmsCost,
+    total
+  };
+
+  document.getElementById("calcResult").innerText =
+`Dager: ${days}
+Timer: ${totalHours}
+Arbeid: ${laborCost} kr
+Kjøring: ${drivingCost} kr
+Avfall: ${waste} kr
+Materiell: ${material} kr
+HMS: ${hmsCost} kr
+
+TOTAL: ${total} kr`;
+
+  document.getElementById("calcResult").classList.remove("hidden");
 }
 
-function kopier() {
-  navigator.clipboard.writeText(
-    document.getElementById("tekst").textContent
-  );
-  alert("Tekst kopiert!");
+async function generateText() {
+  if (!calculationData) {
+    alert("Du må beregne først");
+    return;
+  }
+
+  document.getElementById("aiText").innerText = "Genererer tekst...";
+  document.getElementById("aiSection").classList.remove("hidden");
+
+  try {
+    const res = await fetch("/api/ai", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify(calculationData)
+    });
+
+    const data = await res.json();
+
+    if (!res.ok) {
+      throw new Error(data.error || "AI-feil");
+    }
+
+    document.getElementById("aiText").innerText = data.text;
+  } catch (err) {
+    document.getElementById("aiText").innerText =
+      "Noe gikk galt med AI-generering.\n\n" + err.message;
+  }
+}
+
+function copyText() {
+  const text = document.getElementById("aiText").innerText;
+  navigator.clipboard.writeText(text);
+  alert("Tekst kopiert");
 }
 </script>
 
