--- a/index.html
+++ b/index.html
@@ -6,56 +6,156 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
+    :root {
+      --bg: #f8fafc;
+      --card: #ffffff;
+      --primary: #2563eb;
+      --dark: #0f172a;
+      --muted: #64748b;
+      --success: #16a34a;
+    }
+
     body {
-      font-family: system-ui, sans-serif;
-      background: #f5f5f5;
-      padding: 20px;
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      background: linear-gradient(135deg, #eef2ff, #f8fafc);
+      padding: 16px;
+      color: var(--dark);
     }
+
     .box {
-      max-width: 700px;
+      max-width: 760px;
       margin: auto;
-      background: #fff;
+      background: var(--card);
       padding: 20px;
-      border-radius: 8px;
+      border-radius: 16px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.08);
     }
-    input, textarea, button {
+
+    h1 {
+      margin-bottom: 8px;
+      font-size: 1.6rem;
+    }
+
+    p.subtitle {
+      color: var(--muted);
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
+
+    label {
+      font-weight: 600;
+      margin-top: 14px;
+      display: block;
+    }
+
+    input, textarea {
       width: 100%;
-      padding: 10px;
-      margin: 8px 0;
-      font-size: 16px;
+      padding: 12px;
+      font-size: 15px;
+      border-radius: 10px;
+      border: 1px solid #cbd5f5;
+      margin-top: 6px;
     }
+
+    textarea {
+      resize: vertical;
+    }
+
+    .grid-2 {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px;
+    }
+
+    @media (max-width: 600px) {
+      .grid-2 {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    .buttons {
+      display: flex;
+      gap: 12px;
+      margin-top: 24px;
+    }
+
     button {
-      background: #111;
-      color: #fff;
+      flex: 1;
+      padding: 14px;
+      font-size: 15px;
+      font-weight: 600;
+      border-radius: 12px;
       border: none;
       cursor: pointer;
     }
+
+    #beregnBtn {
+      background: var(--dark);
+      color: white;
+    }
+
+    #aiBtn {
+      background: var(--primary);
+      color: white;
+    }
+
     button:disabled {
-      background: #aaa;
+      opacity: 0.5;
       cursor: not-allowed;
     }
+
     pre {
-      background: #eee;
-      padding: 10px;
+      background: #f1f5f9;
+      padding: 16px;
+      border-radius: 12px;
       white-space: pre-wrap;
+      margin-top: 10px;
+    }
+
+    #kopierBtn {
+      margin-top: 10px;
+      background: var(--success);
+      color: white;
     }
   </style>
 </head>
 
 <body>
   <div class="box">
-    <h1>MinPris – tilbudskalkulator</h1>
+    <h1>🏠 MinPris – tilbudskalkulator</h1>
+    <p class="subtitle">Kalkuler pris og generer profesjonell tilbudstekst</p>
 
-    <textarea id="beskrivelse" rows="4" placeholder="Beskriv jobben (f.eks. 2 dager riving + 6t maling)..."></textarea>
+    <label>Jobbbeskrivelse</label>
+    <textarea id="beskrivelse" rows="4" placeholder="Beskriv jobben..."></textarea>
 
-    <input id="timepris" type="number" placeholder="Timepris (kr)" />
-    <input id="kmPerDag" type="number" placeholder="Km per dag" />
-    <input id="avfall" type="number" placeholder="Avfall (kr)" />
-    <input id="materiell" type="number" placeholder="Materiell totalt (kr)" />
-    <input id="hms" type="number" placeholder="Forbruk HMS per dag (kr)" />
+    <label>Timepris (kr)</label>
+    <input id="timepris" type="number" />
 
-    <button id="beregnBtn">Beregn</button>
-    <button id="aiBtn" disabled>Generer tilbudstekst</button>
+    <div class="grid-2">
+      <div>
+        <label>Kilometer per dag</label>
+        <input id="kmPerDag" type="number" />
+      </div>
+      <div>
+        <label>Pris per km (kr)</label>
+        <input id="prisPerKm" type="number" value="15" />
+      </div>
+    </div>
+
+    <label>Avfall (kr)</label>
+    <input id="avfall" type="number" />
+
+    <label>Materiell totalt (kr)</label>
+    <input id="materiell" type="number" />
+
+    <label>Forbruk HMS per dag (kr)</label>
+    <input id="hms" type="number" />
+
+    <div class="buttons">
+      <button id="beregnBtn">Beregn</button>
+      <button id="aiBtn" disabled>Generer tilbudstekst</button>
+    </div>
 
     <h3>Resultat</h3>
     <pre id="resultat"></pre>
@@ -68,101 +168,82 @@
 <script>
 let kalkyle = null;
 
-/* ---------------- BEREGN ---------------- */
 document.getElementById("beregnBtn").onclick = () => {
-  const beskrivelse = document.getElementById("beskrivelse").value.trim();
+  const beskrivelse = document.getElementById("beskrivelse").value;
   const timepris = Number(document.getElementById("timepris").value);
   const kmPerDag = Number(document.getElementById("kmPerDag").value);
+  const prisPerKm = Number(document.getElementById("prisPerKm").value || 15);
   const avfall = Number(document.getElementById("avfall").value || 0);
   const materiell = Number(document.getElementById("materiell").value || 0);
-  const hmsPerDag = Number(document.getElementById("hms").value || 0);
+  const hms = Number(document.getElementById("hms").value || 0);
 
   if (!beskrivelse || !timepris || !kmPerDag) {
     alert("Fyll inn beskrivelse, timepris og km per dag");
     return;
   }
 
-  // Enkel parsing av timer fra tekst (fallback)
   const timer =
     (beskrivelse.match(/(\d+)\s*t/gi) || [])
       .map(x => Number(x.replace(/\D/g, "")))
       .reduce((a,b) => a + b, 0);
 
-  const dager = Math.max(1, Math.ceil(timer / 7.5));
+  const dager = Math.ceil(timer / 7.5);
   const arbeid = timer * timepris;
-  const kjøring = dager * kmPerDag * 15;
-  const hms = dager * hmsPerDag;
+  const kjøring = dager * kmPerDag * prisPerKm;
+  const hmsTotal = dager * hms;
 
-  const total = arbeid + kjøring + avfall + materiell + hms;
+  const totalEksMva = arbeid + kjøring + avfall + materiell + hmsTotal;
+  const mva = totalEksMva * 0.25;
+  const totalInkMva = totalEksMva + mva;
 
   kalkyle = {
     beskrivelse,
     timer,
     dager,
-    timepris,
     arbeid,
     kjøring,
     avfall,
     materiell,
-    hms,
-    total
+    hms: hmsTotal,
+    totalEksMva,
+    totalInkMva
   };
 
   document.getElementById("resultat").textContent =
 `Dager: ${dager}
 Timer: ${timer}
+
 Arbeid: ${arbeid} kr
 Kjøring: ${kjøring} kr
 Avfall: ${avfall} kr
 Materiell: ${materiell} kr
-HMS: ${hms} kr
+HMS: ${hmsTotal} kr
 
-TOTAL: ${total} kr`;
+TOTAL eks. mva: ${Math.round(totalEksMva)} kr
+MVA (25 %): ${Math.round(mva)} kr
+TOTAL inkl. mva: ${Math.round(totalInkMva)} kr`;
 
   document.getElementById("aiBtn").disabled = false;
 };
 
-/* ---------------- AI ---------------- */
 document.getElementById("aiBtn").onclick = async () => {
-  const tilbudEl = document.getElementById("tilbud");
-  const kopiBtn = document.getElementById("kopierBtn");
+  document.getElementById("tilbud").textContent = "Genererer tilbudstekst…";
+  document.getElementById("kopierBtn").style.display = "none";
 
-  tilbudEl.textContent = "Genererer tekst...";
-  kopiBtn.style.display = "none";
+  const res = await fetch("/api/ai", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify(kalkyle)
+  });
 
-  try {
-    const res = await fetch("/api/ai", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(kalkyle),
-    });
+  const data = await res.json();
 
-    // 🔴 Viktig: backend-feil er ofte ren tekst
-    if (!res.ok) {
-      const text = await res.text();
-      tilbudEl.textContent =
-        "AI-feil:\n" + text;
-      return;
-    }
+  document.getElementById("tilbud").textContent =
+    data.text || "Noe gikk galt med AI-generering.";
 
-    const data = await res.json();
-
-    if (!data.text) {
-      tilbudEl.textContent =
-        "AI svarte uten tekst.";
-      return;
-    }
-
-    tilbudEl.textContent = data.text;
-    kopiBtn.style.display = "block";
-
-  } catch (err) {
-    tilbudEl.textContent =
-      "Teknisk feil:\n" + err.message;
-  }
+  document.getElementById("kopierBtn").style.display = "block";
 };
 
-/* ---------------- KOPIER ---------------- */
 document.getElementById("kopierBtn").onclick = () => {
   navigator.clipboard.writeText(
     document.getElementById("tilbud").textContent
